--- a/01_WEB/Entregas/in-progress/actividad-8_higa-Ivan/styles.css
+++ b/01_WEB/Entregas/in-progress/actividad-8_higa-Ivan/styles.css
@@ -2,3 +2,18 @@ body{
     background-color: #1e2238;
     color: white;
 }
+
+div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button{
+    font-size: 24px;
+    color: white;
+    background-color: #2e3248;
+    border-radius: 16px;
+    padding: 8px;
+}
